# example-package-mbadams

./: LICENSE  README.md  pyproject.toml
example_package_mbadams-0.1.1/: pyproject.toml
src/example_package_mbadams/: rescale.py
tests/: test_rescale.py
